force-app/main/default/objects/ProductRelationship__c/ProductRelationship__c.object-meta.xml
<CustomObject>
    <description>Establishes relationships between products</description>
    <label>Product Relationship</label>
    <nameField>
        <displayFormat>PRR-{00000000}</displayFormat>
        <label>Product Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>