force-app/main/default/objects/ProductRelationship__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Invalidates the product relationship after the specified date</description>
    <inlineHelpText>Specify a date after which this relationship no longer applies. Leave empty for ongoing relationships.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>