force-app/main/default/objects/ProductRelationship__c/fields/ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>ParentProduct__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Parent Product</description>
    <inlineHelpText>Choose the Parent Product</inlineHelpText>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>ParentProductRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>