force-app/main/default/objects/ProductRelationship__c/fields/RelatedProduct__c.field-meta.xml
<CustomField>
    <fullName>RelatedProduct__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product that is related to the parent product</description>
    <inlineHelpText>Choose the product that is related to the parent product.</inlineHelpText>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Products</relationshipLabel>
    <relationshipName>ChildProductRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>