force-app/main/default/objects/ProductRelationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>Describes how the parent product is related to the related product</description>
    <inlineHelpText>Specify how the parent product is related to the related product.</inlineHelpText>
    <label>Relationship</label>
	<complianceGroup>GDPR</complianceGroup>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replaces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>